tests/NormalTests/paczka1/fuzzy1/57830037.err
Error in line 2: A200 S751 49,6
Error in line 16: FV4b S322 50,3
Error in line 21: T6NffiNSoC A200 17,7
Error in line 29: nGypfAWP A200 40,9
